--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-https://pastebin.com/raw/vn4KhmyM
+<!DOCTYPE html>
+<html>
+<head>
+  <title>ClaimZone Chat & Earn</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    body { background:#111; color:#fff; margin:0; font-family:sans-serif; text-align:center; }
+    iframe { width:100%; height:80vh; border:none; margin-top:20px; }
+    .btn { display:inline-block; padding:12px 24px; background:violet; color:black; border-radius:8px; text-decoration:none; margin-top:10px; }
+    .message { background:#222; padding:14px; margin:16px; border-radius:12px; }
+    input, select { padding:10px; width:85%; border-radius:8px; border:none; margin:5px 0; }
+    button { padding:10px 20px; background:violet; color:black; border:none; border-radius:8px; margin-top:10px; }
+  </style>
+</head>
+<body>
+  <h2>💬 ClaimZone Chat & Earn</h2>
+
+  <div class="message">
+    📢 Task 1: Join our Telegram channel →  
+    <a href="https://t.me/+xgpCrU_PZNE5ZmI9" target="_blank">Join Now</a>
+  </div>
+
+  <div class="message">
+    💰 <b>Offer Wall: Complete Any Offer & Earn Coins</b><br><br>
+    🔹 <b>Offer 1:</b> Install App & Earn <b>10 Coins</b><br>
+    👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=70740" target="_blank">📲 Start Offer 1</a><br><br>
+
+    🔹 <b>Offer 2:</b> Survey & Earn <b>8 Coins</b><br>
+    👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=70069" target="_blank">📝 Start Offer 2</a><br><br>
+
+    🔹 <b>Offer 3:</b> Bonus Offer & Earn <b>5 Coins</b><br>
+    👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=58609&tracking_id=" target="_blank">🎁 Start Offer 3</a>
+  </div>
+
+  <div class="message">
+    <h3>📩 Claim Your Coins</h3>
+    <input type="text" id="tgid" placeholder="Enter @Telegram username">
+    <select id="task">
+      <option value="">-- Select Task Completed --</option>
+      <option>Joined Telegram</option>
+      <option>Offer 1</option>
+      <option>Offer 2</option>
+      <option>Offer 3</option>
+    </select>
+    <button onclick="submitTask()">✅ Submit</button>
+    <p id="result" style="color:lime; margin-top:10px;"></p>
+  </div>
+
+  <iframe src="https://typebot.co/embed/my-typebot-1-gwciurj"></iframe>
+  <a href="https://claimzone.github.io" class="btn">🔙 Back to ClaimZone</a>
+
+  <script>
+    function submitTask() {
+      const username = document.getElementById("tgid").value.trim();
+      const task = document.getElementById("task").value;
+      const result = document.getElementById("result");
+
+      if (!username || !task) {
+        result.innerText = "❌ Please enter Telegram ID and select a task.";
+        return;
+      }
+
+      fetch("https://script.google.com/macros/s/AKfycbz_EsHtbPeYV6VpM0vDmxzi6ETjzNCB1apNoxCh0w9qlgbq4iAAZIBekHJ3ckYidRWt/exec", {
+        method: "POST",
+        body: JSON.stringify({ username, task }),
+        headers: { "Content-Type": "application/json" }
+      })
+      .then(res => res.text())
+      .then(data => {
+        result.innerText = "✅ Task submitted! Coins will be credited soon.";
+        document.getElementById("tgid").value = "";
+        document.getElementById("task").value = "";
+      })
+      .catch(err => {
+        result.innerText = "❌ Error submitting. Try again later.";
+      });
+    }
+  </script>
+</body>
+</html>
