--- a/index.html
+++ b/index.html
@@ -47,6 +47,21 @@
   </div>
 
   <iframe src="https://typebot.co/embed/my-typebot-1-gwciurj"></iframe>
+
+  <!-- ✅ Adsterra Banner Ad -->
+  <div style="text-align:center; margin-top:20px;">
+    <script type="text/javascript">
+      atOptions = {
+        'key' : 'd739d8103ffd24986ac0eaf7451a2c0b',
+        'format' : 'iframe',
+        'height' : 60,
+        'width' : 468,
+        'params' : {}
+      };
+    </script>
+    <script type="text/javascript" src="//www.highperformanceformat.com/d739d8103ffd24986ac0eaf7451a2c0b/invoke.js"></script>
+  </div>
+
   <a href="https://claimzone.github.io" class="btn">🔙 Back to ClaimZone</a>
 
   <script>
