--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -29,7 +30,7 @@
     👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=70069" target="_blank">📝 Start Offer 2</a><br><br>
 
     🔹 <b>Offer 3:</b> Bonus Offer & Earn <b>5 Coins</b><br>
-    👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=58609&tracking_id=" target="_blank">🎁 Start Offer 3</a>
+    👉 <a href="https://singingfiles.com/show.php?l=0&u=2421068&id=58609" target="_blank">🎁 Start Offer 3</a>
   </div>
 
   <div class="message">
@@ -48,12 +49,12 @@
 
   <iframe src="https://typebot.co/embed/my-typebot-1-gwciurj"></iframe>
 
-  <!-- ✅ Adsterra Banner Ad (GitHub Compatible) -->
+  <!-- ✅ Adsterra Banner Ad (Safe Embed) -->
   <div style="text-align:center; margin-top:20px;">
-    <iframe src="https://www.highperformanceformat.com/d739d8103ffd24986ac0eaf7451a2c0b/invoke.js"
-            style="width:468px; height:60px; border:0; overflow:hidden;"
-            scrolling="no"
-            frameborder="0"></iframe>
+    <iframe src="https://www.highperformanceformat.com/d739d8103ffd24986ac0eaf7451a2c0b/invoke.php"
+            width="468" height="60"
+            frameborder="0" scrolling="no"
+            style="border:0;overflow:hidden;"></iframe>
   </div>
 
   <a href="https://claimzone.github.io" class="btn">🔙 Back to ClaimZone</a>
